Tue Dec  8 15:54:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Updater_T.cpp:
        * connectors/dds4ccm/impl/ndds/Updater_T.h:
          Added existence checks as mandated by the spec

Tue Dec  8 15:29:40 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * examples/BasicSP/descriptors/run_test.pl:
        * examples/Hello/descriptors/run_test.pl:
        * examples/Null_Component/descriptors/run_test.pl:
          Resolved fuzz warnings.

Tue Dec  8 15:20:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DDS_StateListen_T.cpp
        * connectors/dds4ccm/impl/ndds/DDS_StateListen_T.h
        * connectors/dds4ccm/impl/ndds/DDS_Update_T.cpp
        * connectors/dds4ccm/impl/ndds/DDS_Update_T.h
          Cache dds executors

Tue Dec  8 15:17:44 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/Reader/Receiver/Reader_Test_Receiver_exec.cpp:
          Resolved compiler warnings.

Tue Dec  8 15:11:22 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/tests/CIAO/ExecutionManager-Deployments/run_test.pl:
        * DAnCE/tests/CIAO/NodeManager-Deployments/run_test.pl:
        * tests/Bug_3769_Regression/descriptors/run_test.pl:
          Resolved fuzz errors.

Tue Dec  8 15:01:58 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * examples/BasicSP/descriptors/run_test.pl:
        * examples/Hello/descriptors/run_test.pl:
        * examples/Hello/descriptors/run_test_without_ns.pl:
        * examples/Null_Component/descriptors/run_test.pl:
          Resolved fuzz errors.

Tue Dec  8 14:56:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_Listen_T.h:
        * connectors/dds4ccm/impl/ndds/DDS_StateListen_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_StateListen_T.h:
          Provide access to the DDS entities
